Fixed alignment

--- a/style.css
+++ b/style.css
@@ -14,4 +14,20 @@ table, th, td {
 table {
     width: 600px;
 }
+label {
+    display: inline-block;
+    width: 150px;
+}
+
+input, textarea {
+    width: 300px;
+}
+
+input {
+    display: inline-block;
+}
+
+textarea {
+    vertical-align: middle;
+}
 
